# openapi.yml
@@ -747,6 +747,134 @@ paths:
               $ref: '#/components/schemas/CalDavAuth-cal-dav-auth.write'
         required: true
       deprecated: false
+  /cal_dav_sync_logs:
+    get:
+      operationId: api_cal_dav_sync_logs_get_collection
+      tags:
+        - CalDavSyncLog
+      responses:
+        '200':
+          description: 'CalDavSyncLog collection'
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/CalDavSyncLog-log.read'
+            application/ld+json:
+              schema:
+                type: object
+                properties:
+                  member: { type: array, items: { $ref: '#/components/schemas/CalDavSyncLog.jsonld-log.read' } }
+                  totalItems: { type: integer, minimum: 0 }
+                  view: { type: object, properties: { '@id': { type: string, format: iri-reference }, '@type': { type: string }, first: { type: string, format: iri-reference }, last: { type: string, format: iri-reference }, previous: { type: string, format: iri-reference }, next: { type: string, format: iri-reference } }, example: { '@id': string, type: string, first: string, last: string, previous: string, next: string } }
+                  search: { type: object, properties: { '@type': { type: string }, template: { type: string }, variableRepresentation: { type: string }, mapping: { type: array, items: { type: object, properties: { '@type': { type: string }, variable: { type: string }, property: { type: [string, 'null'] }, required: { type: boolean } } } } } }
+                required:
+                  - member
+        '403':
+          description: Forbidden
+          content:
+            application/ld+json:
+              schema:
+                $ref: '#/components/schemas/Error.jsonld'
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Error'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          links: {  }
+      summary: 'Retrieves the collection of CalDavSyncLog resources.'
+      description: 'Retrieves the collection of CalDavSyncLog resources.'
+      parameters:
+        -
+          name: page
+          in: query
+          description: 'The collection page number'
+          required: false
+          deprecated: false
+          allowEmptyValue: true
+          schema:
+            type: integer
+            default: 1
+          style: form
+          explode: false
+          allowReserved: false
+        -
+          name: calDavAuth.id
+          in: query
+          description: ''
+          required: false
+          deprecated: false
+          allowEmptyValue: false
+          schema:
+            type: integer
+          style: form
+          explode: false
+          allowReserved: false
+        -
+          name: 'calDavAuth.id[]'
+          in: query
+          description: ''
+          required: false
+          deprecated: false
+          allowEmptyValue: false
+          schema:
+            type: array
+            items:
+              type: integer
+          style: form
+          explode: true
+          allowReserved: false
+        -
+          name: 'createdAt[before]'
+          in: query
+          description: ''
+          required: false
+          deprecated: false
+          allowEmptyValue: false
+          schema:
+            type: string
+          style: form
+          explode: false
+          allowReserved: false
+        -
+          name: 'createdAt[strictly_before]'
+          in: query
+          description: ''
+          required: false
+          deprecated: false
+          allowEmptyValue: false
+          schema:
+            type: string
+          style: form
+          explode: false
+          allowReserved: false
+        -
+          name: 'createdAt[after]'
+          in: query
+          description: ''
+          required: false
+          deprecated: false
+          allowEmptyValue: false
+          schema:
+            type: string
+          style: form
+          explode: false
+          allowReserved: false
+        -
+          name: 'createdAt[strictly_after]'
+          in: query
+          description: ''
+          required: false
+          deprecated: false
+          allowEmptyValue: false
+          schema:
+            type: string
+          style: form
+          explode: false
+          allowReserved: false
+      deprecated: false
   '/events/{id}/cancel':
     post:
       operationId: api_events_idcancel_post
@@ -1948,6 +2076,58 @@ components:
           type: string
         password:
           type: string
+    CalDavSyncLog-log.read:
+      type: object
+      description: ''
+      deprecated: false
+      properties:
+        id:
+          readOnly: true
+          type: integer
+        countItems:
+          type: integer
+        createdAt:
+          type: string
+          format: date-time
+        failed:
+          type: boolean
+        errorDetails:
+          type:
+            - string
+            - 'null'
+        errorMessage:
+          type:
+            - string
+            - 'null'
+    CalDavSyncLog.jsonld-log.read:
+      type: object
+      description: ''
+      deprecated: false
+      properties:
+        '@id':
+          readOnly: true
+          type: string
+        '@type':
+          readOnly: true
+          type: string
+        id:
+          readOnly: true
+          type: integer
+        countItems:
+          type: integer
+        createdAt:
+          type: string
+          format: date-time
+        failed:
+          type: boolean
+        errorDetails:
+          type:
+            - string
+            - 'null'
+        errorMessage:
+          type:
+            - string
+            - 'null'
     CancelEvent:
       type: object
       description: ''
@@ -2813,6 +2993,8 @@ tags:
     name: ResetPassword
   -
     name: CalDavAuth
+  -
+    name: CalDavSyncLog
   -
     name: Event
   -
